# hippocampus

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.txt  README.md  TODO.md  diesel.toml  flake.nix  module.nix  mvp-steps.md  sr-system-design.md  test-results-new.txt  test-results-old.txt
.claude/skills/: review-pr.md
.claude/skills/review-pr/: SKILL.md
.helix/: recent-files.txt
migrations/2025-03-04-200553_create_items/: down.sql  up.sql
migrations/2025-03-04-235756_create_reviews/: down.sql  up.sql
migrations/2025-03-05-035024_make_titles_unique/: down.sql  up.sql
migrations/2025-03-06-075304_let_tags_be_user_hidden/: down.sql  up.sql
migrations/2025-03-27-085750_add_card_priority/: down.sql  up.sql
migrations/2025-04-05-084827_add_suspend_date/: down.sql  up.sql
migrations/2025-04-10-042036_next_review_non_null/: down.sql  up.sql
migrations/2026-02-23-044946-0000_add_card_sort_position/: down.sql  up.sql
migrations/2026-02-23-045004-0000_add_card_priority_offset/: down.sql  up.sql
migrations/2026-02-25-134119-0000_add_item_type_review_function/: down.sql  up.sql
migrations/2026-02-26-000000-0000_make_sort_position_nonnull/: down.sql  up.sql
migrations/2026-02-27-130409-0000_add_item_relations/: down.sql  up.sql
migrations/2026-03-02-055105-0000_add_card_fetched_event/: down.sql  up.sql
proptest-regressions/repo/card_cache/: prop_tests.txt
proptest-regressions/repo/card_repo/: prop_tests.txt
proptest-regressions/repo/item_repo/: prop_tests.txt
proptest-regressions/repo/query_repo/: prop_tests.txt
proptest-regressions/repo/tag_repo/: prop_tests.txt
src/: card_event_registry.rs  config.rs  db.rs  dto.rs  errors.rs  lib.rs  main.rs  models.rs  repo.rs  schema.rs  test_utils.rs  time_utils.rs
src/card_event_registry/: prop_tests.rs
src/config/: prop_tests.rs  tests.rs
src/dto/: prop_tests.rs  tests.rs
src/errors/: tests.rs
src/handlers/: card_fetched_event_handlers.rs  card_handlers.rs  item_handlers.rs  item_relation_handlers.rs  item_type_handlers.rs  mod.rs  review_handlers.rs  tag_handlers.rs
src/handlers/card_handlers/: prop_tests.rs  tests.rs
src/models/: card.rs  card_fetched_event.rs  ids.rs  item.rs  item_relation.rs  item_tag.rs  item_type.rs  json_value.rs  mod.rs  review.rs  tag.rs
src/models/card/: prop_tests.rs
src/repo/: card_cache.rs  card_fetched_event_repo.rs  card_repo.rs  item_relation_repo.rs  item_repo.rs  item_type_repo.rs  mod.rs  query_repo.rs  review_repo.rs  tag_repo.rs  tests.rs
tests/: card_fetched_event_tests.rs  card_priority_tests.rs  card_tests.rs  common.rs  integration.rs  integration.rs.backup  item_relation_tests.rs  item_tests.rs  item_type_tests.rs  migration_tests.rs  review_tests.rs  simple_cli_tests.rs  tag_tests.rs
tests/common/: mod.rs
(+21 files in other folders)
