cargo-features = ["edition2024"]

[package]
name = "hippocampus"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework (Axum or Warp; example uses Axum)
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
hyper = "1.6.0" # for lower-level HTTP support if needed

# Database
diesel = { version = "2.2.8", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono", "uuid", "time"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"

# Serde for serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

# UUID generation
uuid = { version = "1.15.1", features = ["v4", "serde"] }

# Time management
chrono = { version = "0.4.40", features = ["serde"] }

# Error handling
anyhow = "1.0.97"
thiserror = "2.0.12"

# For logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# For testing
tokio-test = "0.4.4"
reqwest = { version = "0.12.12", features = ["json"] }
dotenv = "0.15.0"
tower = "0.5.2"
