cargo-features = ["edition2024"]

[package]
name = "hippocampus"
version = "0.1.0"
edition = "2024"

[features]
test = []

[lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }

[dependencies]
# Web framework (Axum or Warp; example uses Axum)
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["query"] }
tokio = { version = "1.43.0", features = ["full"] }
hyper = "1.6.0" # for lower-level HTTP support if needed
tower-http = { version = "0.6.2", features = ["cors"] } # For CORS support

# Database
diesel = { version = "2.2.8", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "serde_json", "chrono", "uuid", "time"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"

# Serde for serialization
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

# UUID generation
uuid = { version = "1.15.1", features = ["v4", "serde"] }

# Time management
chrono = { version = "0.4.40", features = ["serde"] }

# Error handling
anyhow = "1.0.97"
thiserror = "2.0.12"

# For logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-appender = "0.2.3"

# For loading environment variables
dotenv = "0.15.0"

# For configuration management
directories = "5.0.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
toml = { version = "0.8.14", features = ["parse"] }

[dev-dependencies]
# For testing
tokio-test = "0.4.4"
reqwest = { version = "0.12.12", features = ["json"] }
tower = "0.5.2"
serde_html_form = "0.2.7"
tempfile = "3.9.0"
